clang/test/BSC/Negative/SafeZone/safe_stmt/safe_stmt.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

_Safe void test_safe_stmt1(void){
    int a = 0;
    a++;                             // allowed
    _Unsafe a++;                      // ok
    int *b = &a;                     // expected-error {{'&' operator is forbidden in the safe zone}}
    _Unsafe int *c = &a;              // ok
    _Unsafe {
        int *d = &a;                 // ok
        _Safe int *e = &a;            // expected-error {{'&' operator is forbidden in the safe zone}}
    }
}

void test_safe_stmt2() {
    int a = 0;
    a++;                             // ok
    _Safe a++;                        // allowed
    int *b = &a;                     // ok
    _Safe int *c = &a;                // expected-error {{'&' operator is forbidden in the safe zone}}
    _Safe {
        int *d = &a;                 // expected-error {{'&' operator is forbidden in the safe zone}}
        _Unsafe int *e = &a;           // ok
    }
}

T add<T>(T a, T b) {
    return a + b;
}

_Safe void foo<T>(T* _Owned p) {
    T * a = (T*)p;                      // expected-error {{conversion from type 'int *_Owned' to 'int *' is forbidden in the safe zone}}
    _Unsafe T * b = (T*)p;              // expected-error {{cannot cast between _Owned and raw pointer; use __move_to_raw or __take_from_raw for ownership transfer}}
    T * c = (T*)p;                     // expected-error {{conversion from type 'int *_Owned' to 'int *' is forbidden in the safe zone}}
}

_Safe void test_safe_stmt3(void) {
    int a = 0;
    for (int i = 0; i < 10; i++) {      // allowed
        a++;                            // allowed
    }
    _Unsafe for (int i = 0; i < 10; i++) {   // ok
        a++;                                // ok
    }
    while(a > 0) {
        a--;                            // allowed
    }
    _Unsafe while(a < 10) {
        a++;                            // ok
    }
    test_safe_stmt2();                  // expected-error {{_Unsafe function call is forbidden in the safe zone}}
    _Unsafe test_safe_stmt2();           // ok
    _Unsafe switch(a) {
        case 1: a++;                    // ok
        case 2: a = a +5;
        _Safe default: a--;               // allowed
    }
    add<int>(1, 2);                      // expected-error {{_Unsafe function call is forbidden in the safe zone}}
    _Unsafe int *_Owned p = __take_from_raw(&a);
    foo<int>(p); // expected-note {{in instantiation of function template specialization 'foo<int>' requested here}}
}